# home_scraper

./: .env.example  .gitignore  .pylintrc  Dockerfile  README.md  app.py  pyproject.toml  setup.cfg
fixtures/: existing_homes.txt
home_scraper/: __main__.py  config.py  core.py
home_scraper/config/: __init__.py  _helpers.py  enums.py
home_scraper/notifications/: slack.py
home_scraper/scraping/: enums.py  model.py  tags.py  urls.py
home_scraper/storage/: enums.py  files.py  s3.py
